syntax = "proto3";

package proto;

message MessageRequest {
    repeated string targetIds = 1;
    WsMessageRequest message = 2;
}

message MessageResponse {
    Status status = 1;
    enum Status {
        Ok = 0;
        NotRouted = 1;
    }
}

message WsResponse {
    Status status = 1;
    string message = 2;
    enum Status {
        NONE = 0;
        Ok = 1;
        Error = 2;
    }
}

message WsHandshakeRequest {
    string id = 1;
    string secret = 2;
}

message WsMessageRequest {
    string messageId = 1;
    string targetId = 2;
    MessageType type = 3;
    string data = 4;
    string sourceId = 5;
    int32 ext = 6;
}

enum MessageType {
    NONE = 0;
    P2P = 1;
    GROUP = 2;
    CTRL = 3;
}
